k8s/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: demo-svcs
spec:
  selector:
    app: service1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
